feat: Prevent date and location duplicates (#13)
* feat: Prevent date and location duplicates

* chore: Upgrade version
